--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "dependencies": {
     "ethers": "^5.5.2",
     "node-fetch": "^3.1.0",
-    "shell-escape": "^0.2.0"
+    "node-telegram-bot-api": "^0.56.0"
   }
 }
